# prettier-plugin-motoko

./: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: Release.yml  ReleaseTag.yml  Tag.yml  Tests.yml  node.js.yml  release.yml  tests.yml
motoko-rust-bindings/: Cargo.toml
motoko-rust-bindings/src/: lib.rs
src/: bindings.ts  defaultOptions.ts  index.ts  options.ts  wasm.ts
src/environments/: node.ts  web.ts
src/languages/: index.ts  motoko.ts
src/options/: index.ts
src/parsers/: index.ts
src/parsers/motoko-tt-parse/: index.ts  location.ts  parse.ts  preprocess.ts
src/printers/: index.ts
src/printers/motoko-tt-ast/: imports.ts  index.ts  print.ts  spaceConfig.ts  utils.ts
src/utils/: removeZeroWidthCharacters.json  removeZeroWidthCharacters.ts  zeroWidth.d.ts  zeroWidth.js
tests/: cli.test.ts  compiler.test.ts  formatter.test.ts  imports.test.ts  motoko.test.ts
tests/motoko/: .gitignore
tests/test-webapp/: package-lock.json  package.json  vite.config.ts
tests/test-webapp/src/: App.tsx
wasm/: .npmignore  Cargo.toml
wasm/src/: lib.rs
