[package]
name = "wasm"
version = "0.1.0"
authors = ["Ryan Vandersmith <ryan.vandersmith@dfinity.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
wasm-bindgen = { version = "0.2.82" }
serde-wasm-bindgen = "0.4.5"
motoko = "0.0.19"

console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
